--- a/.github/workflows/update_site.yml
+++ b/.github/workflows/update_site.yml
@@ -30,5 +30,6 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd /opt/speedy-ship-base
-            npm install 
-            npm run build
+            sudo npm install 
+            sudo npm run build
+            sudo chown -R www-data:www-data /opt/speedy-ship-base 
