--- a/.github/workflows/update_site.yml
+++ b/.github/workflows/update_site.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Ensure destination exists
         run: |
-          ssh -i ~/.ssh/id_rsa "${SSH_USER}@${SSH_HOST}" "mkdir -p '${DEST_DIR}'"
+          ssh -i ~/.ssh/id_rsa "${SSH_USER}@${SSH_HOST}" "mkdir -p /opt/speedy-ship-base"
 
       - name: Copy files via rsync (overwrite; prune extras)
         run: |
