--- a/.github/workflows/update_site.yml
+++ b/.github/workflows/update_site.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Ensure destination exists
         run: |
-          ssh -i ~/.ssh/id_rsa "${SSH_USER}@${SSH_HOST}" "mkdir -p /opt/speedy-ship-base"
+          ssh -i ~/.ssh/id_rsa "${SERVER_USER}@${SERVER_HOST}" "mkdir -p /opt/speedy-ship-base"
 
       - name: Copy files via rsync (overwrite; prune extras)
         run: |
@@ -33,7 +33,7 @@ jobs:
             --exclude ".git/" \
             --exclude ".github/" \
             -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=yes" \
-            ./ "${SSH_USER}@${SSH_HOST}:/opt/speedy-ship-base/"
+            ./ "${SERVER_USER}@${SERVER_HOST}:/opt/speedy-ship-base/"
 
       #- name: delete old files
       #  run: |
