--- a/.github/workflows/update_site.yml
+++ b/.github/workflows/update_site.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Write SSH key
         run: |
           install -m 700 -d ~/.ssh
-          printf '%s\n' "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          printf '%s\n' ${{ secrets.SSH_PRIVATE_KEY }} > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
       # - name: Trust host key
@@ -25,7 +25,7 @@ jobs:
 
       - name: Ensure destination exists
         run: |
-          ssh -i ~/.ssh/id_rsa "${SERVER_USER}@${SERVER_HOST}" "mkdir -p /opt/speedy-ship-base"
+          ssh -i ~/.ssh/id_rsa ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} "mkdir -p /opt/speedy-ship-base"
 
       - name: Copy files via rsync (overwrite; prune extras)
         run: |
@@ -33,7 +33,7 @@ jobs:
             --exclude ".git/" \
             --exclude ".github/" \
             -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=yes" \
-            ./ "${SERVER_USER}@${SERVER_HOST}:/opt/speedy-ship-base/"
+            ./ "${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/opt/speedy-ship-base/"
 
       #- name: delete old files
       #  run: |
